--- a/style.css
+++ b/style.css
@@ -1,101 +1,367 @@
-.m-0 { margin: 0 !important; }
-.m-1 { margin: 4px !important; }
-.m-2 { margin: 8px !important; }
-.m-3 { margin: 16px !important; }
-.m-4 { margin: 24px !important; }
-.m-5 { margin: 48px !important; }
+.m-0 {
+    margin: 0 !important;
+}
 
-.mt-0 { margin-top: 0 !important; }
-.mt-1 { margin-top: 4px !important; }
-.mt-2 { margin-top: 8px !important; }
-.mt-3 { margin-top: 16px !important; }
-.mt-4 { margin-top: 24px !important; }
-.mt-5 { margin-top: 48px !important; }
+.m-1 {
+    margin: 4px !important;
+}
 
-.mb-0 { margin-bottom: 0 !important; }
-.mb-1 { margin-bottom: 4px !important; }
-.mb-2 { margin-bottom: 8px !important; }
-.mb-3 { margin-bottom: 16px !important; }
-.mb-4 { margin-bottom: 24px !important; }
-.mb-5 { margin-bottom: 48px !important; }
+.m-2 {
+    margin: 8px !important;
+}
 
-.ml-0 { margin-left: 0 !important; }
-.ml-1 { margin-left: 4px !important; }
-.ml-2 { margin-left: 8px !important; }
-.ml-3 { margin-left: 16px !important; }
-.ml-4 { margin-left: 24px !important; }
-.ml-5 { margin-left: 48px !important; }
+.m-3 {
+    margin: 16px !important;
+}
 
-.mr-0 { margin-right: 0 !important; }
-.mr-1 { margin-right: 4px !important; }
-.mr-2 { margin-right: 8px !important; }
-.mr-3 { margin-right: 16px !important; }
-.mr-4 { margin-right: 24px !important; }
-.mr-5 { margin-right: 48px !important; }
+.m-4 {
+    margin: 24px !important;
+}
 
-.mx-0 { margin-left: 0 !important; margin-right: 0 !important; }
-.mx-1 { margin-left: 4px !important; margin-right: 4px !important; }
-.mx-2 { margin-left: 8px !important; margin-right: 8px !important; }
-.mx-3 { margin-left: 16px !important; margin-right: 16px !important; }
-.mx-4 { margin-left: 24px !important; margin-right: 24px !important; }
-.mx-5 { margin-left: 48px !important; margin-right: 48px !important; }
-.mx-auto { margin-left: auto !important; margin-right: auto !important; }
+.m-5 {
+    margin: 48px !important;
+}
 
-.my-0 { margin-top: 0 !important; margin-bottom: 0 !important; }
-.my-1 { margin-top: 4px !important; margin-bottom: 4px !important; }
-.my-2 { margin-top: 8px !important; margin-bottom: 8px !important; }
-.my-3 { margin-top: 16px !important; margin-bottom: 16px !important; }
-.my-4 { margin-top: 24px !important; margin-bottom: 24px !important; }
-.my-5 { margin-top: 48px !important; margin-bottom: 48px !important; }
+.mt-0 {
+    margin-top: 0 !important;
+}
 
-.p-0 { padding: 0 !important; }
-.p-1 { padding: 4px !important; }
-.p-2 { padding: 8px !important; }
-.p-3 { padding: 16px !important; }
-.p-4 { padding: 24px !important; }
-.p-5 { padding: 48px !important; }
+.mt-1 {
+    margin-top: 4px !important;
+}
 
-.pt-0 { padding-top: 0 !important; }
-.pt-1 { padding-top: 4px !important; }
-.pt-2 { padding-top: 8px !important; }
-.pt-3 { padding-top: 16px !important; }
-.pt-4 { padding-top: 24px !important; }
-.pt-5 { padding-top: 48px !important; }
+.mt-2 {
+    margin-top: 8px !important;
+}
 
-.pb-0 { padding-bottom: 0 !important; }
-.pb-1 { padding-bottom: 4px !important; }
-.pb-2 { padding-bottom: 8px !important; }
-.pb-3 { padding-bottom: 16px !important; }
-.pb-4 { padding-bottom: 24px !important; }
-.pb-5 { padding-bottom: 48px !important; }
+.mt-3 {
+    margin-top: 16px !important;
+}
 
-.pl-0 { padding-left: 0 !important; }
-.pl-1 { padding-left: 4px !important; }
-.pl-2 { padding-left: 8px !important; }
-.pl-3 { padding-left: 16px !important; }
-.pl-4 { padding-left: 24px !important; }
-.pl-5 { padding-left: 48px !important; }
+.mt-4 {
+    margin-top: 24px !important;
+}
 
-.pr-0 { padding-right: 0 !important; }
-.pr-1 { padding-right: 4px !important; }
-.pr-2 { padding-right: 8px !important; }
-.pr-3 { padding-right: 16px !important; }
-.pr-4 { padding-right: 24px !important; }
-.pr-5 { padding-right: 48px !important; }
+.mt-5 {
+    margin-top: 48px !important;
+}
 
-.px-0 { padding-left: 0 !important; padding-right: 0 !important; }
-.px-1 { padding-left: 4px !important; padding-right: 4px !important; }
-.px-2 { padding-left: 8px !important; padding-right: 8px !important; }
-.px-3 { padding-left: 16px !important; padding-right: 16px !important; }
-.px-4 { padding-left: 24px !important; padding-right: 24px !important; }
-.px-5 { padding-left: 48px !important; padding-right: 48px !important; }
+.mb-0 {
+    margin-bottom: 0 !important;
+}
 
-.py-0 { padding-top: 0 !important; padding-bottom: 0 !important; }
-.py-1 { padding-top: 4px !important; padding-bottom: 4px !important; }
-.py-2 { padding-top: 8px !important; padding-bottom: 8px !important; }
-.py-3 { padding-top: 16px !important; padding-bottom: 16px !important; }
-.py-4 { padding-top: 24px !important; padding-bottom: 24px !important; }
-.py-5 { padding-top: 48px !important; padding-bottom: 48px !important; }
+.mb-1 {
+    margin-bottom: 4px !important;
+}
+
+.mb-2 {
+    margin-bottom: 8px !important;
+}
+
+.mb-3 {
+    margin-bottom: 16px !important;
+}
+
+.mb-4 {
+    margin-bottom: 24px !important;
+}
+
+.mb-5 {
+    margin-bottom: 48px !important;
+}
+
+.ml-0 {
+    margin-left: 0 !important;
+}
+
+.ml-1 {
+    margin-left: 4px !important;
+}
+
+.ml-2 {
+    margin-left: 8px !important;
+}
+
+.ml-3 {
+    margin-left: 16px !important;
+}
+
+.ml-4 {
+    margin-left: 24px !important;
+}
+
+.ml-5 {
+    margin-left: 48px !important;
+}
+
+.mr-0 {
+    margin-right: 0 !important;
+}
+
+.mr-1 {
+    margin-right: 4px !important;
+}
+
+.mr-2 {
+    margin-right: 8px !important;
+}
+
+.mr-3 {
+    margin-right: 16px !important;
+}
+
+.mr-4 {
+    margin-right: 24px !important;
+}
+
+.mr-5 {
+    margin-right: 48px !important;
+}
+
+.mx-0 {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+}
+
+.mx-1 {
+    margin-left: 4px !important;
+    margin-right: 4px !important;
+}
+
+.mx-2 {
+    margin-left: 8px !important;
+    margin-right: 8px !important;
+}
+
+.mx-3 {
+    margin-left: 16px !important;
+    margin-right: 16px !important;
+}
+
+.mx-4 {
+    margin-left: 24px !important;
+    margin-right: 24px !important;
+}
+
+.mx-5 {
+    margin-left: 48px !important;
+    margin-right: 48px !important;
+}
+
+.mx-auto {
+    margin-left: auto !important;
+    margin-right: auto !important;
+}
+
+.my-0 {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+}
+
+.my-1 {
+    margin-top: 4px !important;
+    margin-bottom: 4px !important;
+}
+
+.my-2 {
+    margin-top: 8px !important;
+    margin-bottom: 8px !important;
+}
+
+.my-3 {
+    margin-top: 16px !important;
+    margin-bottom: 16px !important;
+}
+
+.my-4 {
+    margin-top: 24px !important;
+    margin-bottom: 24px !important;
+}
+
+.my-5 {
+    margin-top: 48px !important;
+    margin-bottom: 48px !important;
+}
+
+.p-0 {
+    padding: 0 !important;
+}
+
+.p-1 {
+    padding: 4px !important;
+}
+
+.p-2 {
+    padding: 8px !important;
+}
+
+.p-3 {
+    padding: 16px !important;
+}
+
+.p-4 {
+    padding: 24px !important;
+}
+
+.p-5 {
+    padding: 48px !important;
+}
+
+.pt-0 {
+    padding-top: 0 !important;
+}
+
+.pt-1 {
+    padding-top: 4px !important;
+}
+
+.pt-2 {
+    padding-top: 8px !important;
+}
+
+.pt-3 {
+    padding-top: 16px !important;
+}
+
+.pt-4 {
+    padding-top: 24px !important;
+}
+
+.pt-5 {
+    padding-top: 48px !important;
+}
+
+.pb-0 {
+    padding-bottom: 0 !important;
+}
+
+.pb-1 {
+    padding-bottom: 4px !important;
+}
+
+.pb-2 {
+    padding-bottom: 8px !important;
+}
+
+.pb-3 {
+    padding-bottom: 16px !important;
+}
+
+.pb-4 {
+    padding-bottom: 24px !important;
+}
+
+.pb-5 {
+    padding-bottom: 48px !important;
+}
+
+.pl-0 {
+    padding-left: 0 !important;
+}
+
+.pl-1 {
+    padding-left: 4px !important;
+}
+
+.pl-2 {
+    padding-left: 8px !important;
+}
+
+.pl-3 {
+    padding-left: 16px !important;
+}
+
+.pl-4 {
+    padding-left: 24px !important;
+}
+
+.pl-5 {
+    padding-left: 48px !important;
+}
+
+.pr-0 {
+    padding-right: 0 !important;
+}
+
+.pr-1 {
+    padding-right: 4px !important;
+}
+
+.pr-2 {
+    padding-right: 8px !important;
+}
+
+.pr-3 {
+    padding-right: 16px !important;
+}
+
+.pr-4 {
+    padding-right: 24px !important;
+}
+
+.pr-5 {
+    padding-right: 48px !important;
+}
+
+.px-0 {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+}
+
+.px-1 {
+    padding-left: 4px !important;
+    padding-right: 4px !important;
+}
+
+.px-2 {
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+}
+
+.px-3 {
+    padding-left: 16px !important;
+    padding-right: 16px !important;
+}
+
+.px-4 {
+    padding-left: 24px !important;
+    padding-right: 24px !important;
+}
+
+.px-5 {
+    padding-left: 48px !important;
+    padding-right: 48px !important;
+}
+
+.py-0 {
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+}
+
+.py-1 {
+    padding-top: 4px !important;
+    padding-bottom: 4px !important;
+}
+
+.py-2 {
+    padding-top: 8px !important;
+    padding-bottom: 8px !important;
+}
+
+.py-3 {
+    padding-top: 16px !important;
+    padding-bottom: 16px !important;
+}
+
+.py-4 {
+    padding-top: 24px !important;
+    padding-bottom: 24px !important;
+}
+
+.py-5 {
+    padding-top: 48px !important;
+    padding-bottom: 48px !important;
+}
 
 
 .field-row {
@@ -103,9 +369,11 @@
     display: flex;
     justify-content: flex-end;
 }
+
 .inactive .title-bar {
-    background: linear-gradient(90deg,grey,#b5b5b5);
+    background: linear-gradient(90deg, grey, #b5b5b5);
 }
+
 .inactive img {
     filter: grayscale(100%);
 }
@@ -126,6 +394,7 @@ body {
     font-family: "Pixelated MS Sans Serif", "MS Sans Serif", "MS Serif", "New York", sans-serif;
     user-select: none;
 }
+
 #imagePreview img {
     width: 90px;
     height: auto;
@@ -134,7 +403,7 @@ body {
 }
 
 button.p-active {
-    box-shadow: inset -1px -1px #fff,inset 1px 1px #0a0a0a,inset -2px -2px #dfdfdf,inset 2px 2px grey;
+    box-shadow: inset -1px -1px #fff, inset 1px 1px #0a0a0a, inset -2px -2px #dfdfdf, inset 2px 2px grey;
     text-shadow: 1px 1px #222;
 }
 
@@ -195,6 +464,7 @@ button.p-active {
     #welcome {
         max-width: 100%;
     }
+
     #main_container {
         width: 100%;
     }
@@ -221,3 +491,109 @@ button.p-active {
     transform: translateX(-50%);
 }
 
+.ui-desktop {
+    position: absolute;
+    width: 72px;
+    z-index: -1;
+}
+
+.ui-icon {
+    text-align: center;
+    vertical-align: top;
+    width: 72px;
+    z-index: 0;
+    line-height: 12px;
+    margin: 0;
+    padding: 8px 1px;
+}
+
+.ui-icon-container {
+    position: relative;
+}
+
+.ui-icon-container a {
+    text-decoration: none;
+}
+
+.ui-icon span {
+    display: block;
+    padding: 4px 0 0;
+}
+
+img.start-bar-icon {
+    float: left;
+    width: 18px;
+    height: 18px;
+    margin-top: 3px;
+}
+
+.start-bar {
+    padding: 2px;
+    box-shadow: inset 1px 0 #fff;
+    display: block;
+    background-color: silver;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border-top: 1px solid #f4f4f4;
+    border-bottom: 1px solid #4e4e4e;
+    position: fixed;
+    z-index: 99999;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.start-button-wrapper {
+    float: left;
+    margin-left: 2px;
+    margin-bottom: 2px;
+    vertical-align: middle;
+    display: inline-block;
+    padding: 2px 6px 3px;
+    background-color: silver;
+    border-top: 1px solid #fff;
+    border-left: 1px solid #fff;
+    border-right: 1px solid gray;
+    border-bottom: 1px solid gray;
+    box-shadow: inset 1px 1px #dfdfdf, 1px 0 #000, 0 1px #000, 1px 1px #000;
+    min-width: 59px;
+    margin-right: 6px;
+    color: #000;
+}
+
+.start-button {
+    background-image: url(start-button.png);
+    background-repeat: no-repeat;
+    width: 45px;
+    height: 14px;
+}
+
+.start-bar-window {
+    float: left;
+    padding: 0 10px 0 6px;
+    box-shadow: inset 1px 1px #dfdfdf, 1px 0 #000, 0 1px #000, 1px 1px #000;
+    vertical-align: middle;
+    height: 22px;
+    line-height: 22px;
+    font-family: Arial;
+    font-weight: 400;
+    color: #000;
+
+    min-width: 200px;
+
+    border-top: 1px solid #fff;
+    border-left: 1px solid #fff;
+    border-right: 1px solid #000;
+    border-bottom: 1px solid #000;
+}
+
+.start-bar-window.active {
+    border-top: 1px solid #000;
+    border-left: 1px solid #000;
+    border-right: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    box-shadow: inset 1px 1px silver;
+    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAABytg0kAAAAG0lEQVQYV2M8cODAf3t7ewbG/////z948CADAFuqCj64BtLKAAAAAElFTkSuQmCC);
+}
