static generated film stock selection

--- a/_includes/start-bar.html
+++ b/_includes/start-bar.html
@@ -10,7 +10,7 @@
     </span>
 
     <span class="start-bar-window active mx-1">
-        <img class="start-bar-icon mr-2" src="img/kodak_imaging-1.png" alt="">ContactSheet Generator v0.1
+        <img class="start-bar-icon mr-2" src="img/kodak_imaging-1.png" alt="">ContactSheet Generator v{{ site.data.general.version }}
     </span>
 
 </div>
