filmstocks populated by js at runtime

--- a/css/style.css
+++ b/css/style.css
@@ -468,6 +468,7 @@ button.p-active {
 #filmSelectWindow {
     position: absolute;
     max-width: 800px;
+    min-width: 400px;
 }
 
 #contactSheetWindow {
